Added Argo to integrations page

--- a/workspaces/integrations.mdx
+++ b/workspaces/integrations.mdx
@@ -35,14 +35,17 @@ How to set it up:
 All metric chart configurations are **persisted on your cluster**, meaning they are shared across all users within your workspace who access the same deployment.
 </Note>
 
+## ArgoCD
+
+With the ArgoCD integration you can monitor your GitOps workflow right within mogenius. Once enabled, several components will be added to your Workspaces:  
+- Application status: Shows sync status and errors from Argo for a selected resource.
+- Application overview: On the page **GitOps applications** get a list of applications, see included resources, and monitor the sync status.
+- GitOps log: On resources managed by Argo you'll get a log with a history of commits and pull requests on the Argo application.
+
+Check our [GitOps documentation](https://docs.mogenius.com/cluster-management/gitops) for more information and setup instructions.
+
 ## Gitlab
 
 <Note>
    Coming soon 🚧
-</Note>
-
-## ArgoCD
-
-<Note>
-  Coming soon 🚧
 </Note>
