Added videos for GitOps

--- a/cluster-management/gitops.mdx
+++ b/cluster-management/gitops.mdx
@@ -11,6 +11,8 @@ mogenius comes with a native GitOps integration that allows you to easily implem
 
 You can configure GitOps for each cluster. Navigate to **Clusters** in your organization and open the tab **GitOps**. Click the button to enable GitOps and open the configuration page.
 
+<video src="https://docs.mogenius.com/videos/gitops-setup.mp4" width="640" height="400" controls></video>
+
 <Steps>
   <Step title="Set up Argo and Sealed Secrets">
     mogenius comes with a pre-configured stack for enabling GitOps consisting of two main applications:
@@ -58,6 +60,8 @@ Typical examples for how applications can be defined:
 - A platform deployment consisting of several microservices.
 
 You can create applications in your cluster settings as an admin, or within Workspaces. In your cluster, scroll to the bottom of your **GitOps** page. In a Workspace, navigate to the page **GitOps applications**. Click the button **Create application** to configure a new application.
+
+<video src="https://docs.mogenius.com/videos/gitops-applications.mp4" width="640" height="400" controls></video>
 
 Here's how it works:  
 - Enter a name for your application. This is how it will be displayed in mogenius and it will be added as a folder to your Git repository.  
