Fix GitOps capitalization in sidebar
Added title frontmatter to gitops.mdx to ensure proper "GitOps" capitalization appears in the documentation sidebar navigation.

--- a/cluster-management/gitops.mdx
+++ b/cluster-management/gitops.mdx
@@ -1,3 +1,7 @@
+---
+title: GitOps
+---
+
 GitOps (short for Git Operations) describes a declarative way of managing applications in cloud-native environments using the Git workflow. This means, application configurations are stored and updated via Git repositories. To track and synchronize the Git repositories with Kubernetes, a GitOps engine is used on the clusters.  
 
 mogenius comes with a native GitOps integration that allows you to easily implement GitOps in your teams, or to integrate the mogenius platform with your existing GitOps stack. This way, you can easily deploy workloads and resources to Kubernetes using the UI with mogenius Workspaces (see [Deploying Applications](https://docs.mogenius.com/deploying-applications)). Then, you can add GitOps as a layer of stability and control.  
