Use sidebarTitle to fix GitOps capitalization in sidebar
Changed from 'title' to 'sidebarTitle' frontmatter property to properly control the sidebar navigation display name.

--- a/cluster-management/gitops.mdx
+++ b/cluster-management/gitops.mdx
@@ -1,5 +1,5 @@
 ---
-title: GitOps
+sidebarTitle: "GitOps"
 ---
 
 GitOps (short for Git Operations) describes a declarative way of managing applications in cloud-native environments using the Git workflow. This means, application configurations are stored and updated via Git repositories. To track and synchronize the Git repositories with Kubernetes, a GitOps engine is used on the clusters.  
