--- a/introduction.mdx
+++ b/introduction.mdx
@@ -42,4 +42,4 @@ mogenius acts as a lightweight yet powerful tool, simplifying Kubernetes usage f
 
 ## How to contribute
 
-The mogenius documentation is open-source and based on Docusaurus. You can contribute by editing or creating content within the documentation. Simply create a pull request on [**Github**](https://github.com/mogenius/docs) with your suggested changes. We appreciate your contributions\!
+The mogenius documentation is open-source and based on Docusaurus. You can contribute by editing or creating content within the documentation. Simply create a pull request on [**GitHub**](https://github.com/mogenius/docs) with your suggested changes. We appreciate your contributions\!
