--- a/overview/basic-concepts.mdx
+++ b/overview/basic-concepts.mdx
@@ -14,7 +14,7 @@ Clusters in mogenius serve as control planes for Kubernetes clusters. They provi
 
 ## Workspaces
 
-Workspaces are an extension to Kubernetes that allow you to group resources for a dedicated set of users, based on namespaces, Helm releases, or labels. Each workspace comes with a comprehensive dashboard for monitoring services and to navigate resources on the cluster in an abstracted and safe way for the team. You can create multiple workspaces to manage access and permissions granularly. Workspaces also come with built-in deployment tools, to either connect your existing build pipelines, or to create pipeline starters like Github Actions templates.
+Workspaces are an extension to Kubernetes that allow you to group resources for a dedicated set of users, based on namespaces, Helm releases, or labels. Each workspace comes with a comprehensive dashboard for monitoring services and to navigate resources on the cluster in an abstracted and safe way for the team. You can create multiple workspaces to manage access and permissions granularly. Workspaces also come with built-in deployment tools, to either connect your existing build pipelines, or to create pipeline starters like GitHub Actions templates.
 
 mogenius introduces a Custom Resource Definition (CRD) for workspaces on Kubernetes. This allows you to create and update workspaces in your mogenius account as Kubernetes resources. This can be useful for automating the creation of workspaces, or for integrating it with third-party tooling.
 
