--- a/overview/quickstart.mdx
+++ b/overview/quickstart.mdx
@@ -8,7 +8,7 @@ Getting started with mogenius is easy. Here's a walkthrough of the most importan
 
 ## 1. Sign up​
 
-First, [sign up](https://app.mogenius.com/user/registration) for a mogenius account. You can use a social login (Github, Gitlab, Google, Microsoft), or your email address.
+First, [sign up](https://app.mogenius.com/user/registration) for a mogenius account. You can use a social login (GitHub, Gitlab, Google, Microsoft), or your email address.
 
 ## 2. Create an organization
 
