--- a/overview/release-notes.mdx
+++ b/overview/release-notes.mdx
@@ -19,7 +19,7 @@ With this version, we're proud to present you the next generation of our platfor
 
 - **Workspaces:** Replacing projects, workspaces will be the new hub for teams for managing their applications on clusters. Most importantly, workspaces allow you to import existing resources making implementing mogenius in your existing Kubernetes infrastructure a seamless experience.
 - **New Dashboards:** With workspaces we're introducing a new dashboard focusing on high visibility over Kubernetes deployments while keeping the intuitive and abstracted interfaces that you love.
-- **Pipeline starters:** With pipeline starters for Github Actions you're able to deploy seamlessly from Git repository to Kubernetes. All you need is a Dockerfile in your Github repository. Using the Git integration from your workspace, mogenius will deploy a Github actions workflow to your repository that builds your image and triggers the operator to deploy it on your cluster.
+- **Pipeline starters:** With pipeline starters for GitHub Actions you're able to deploy seamlessly from Git repository to Kubernetes. All you need is a Dockerfile in your GitHub repository. Using the Git integration from your workspace, mogenius will deploy a GitHub actions workflow to your repository that builds your image and triggers the operator to deploy it on your cluster.
 - **Deploy YAML Manifests:** You can now deploy any Kubernetes resource from the UI. Simply select the type and refine the provided manifest template to create the resource.
 - **Resource Manager:** The built-in resource manager allows you to navigate all Kubernetes resources in your workspace and cluster. Check out logs, events, metrics, or directly access YAML manifests through the editor.
 - **Resource topology:** Navigating dependent Kubernetes resources can be hard. So we added a topology to the detail page of each resource that shows all dependent resources and allows you to navigate between them.
