--- a/workspaces/migration-from-projects.mdx
+++ b/workspaces/migration-from-projects.mdx
@@ -27,43 +27,43 @@ Now you're ready to create a workspace.
 
 <iframe width="100%" height="432" src="https://www.loom.com/embed/42d33053dbea497ab163a10efaf3abfa?sid=3df54927-3aa5-4232-809b-db99ac8309a0&hide_title=true&muted=true&hideEmbedTopBar=true&hide_owner=true&hide_speed=true&hide_share=true" allowfullscreen style={{background: "#fff", borderRadius: "16px"}} />
 
-Your workspace is now ready! Your applications are available as deployments on the dashboard and resource page. Finish the setup by connecting your deployments to Github and enabling the build pipeline for continuous deployments from Git.
+Your workspace is now ready! Your applications are available as deployments on the dashboard and resource page. Finish the setup by connecting your deployments to GitHub and enabling the build pipeline for continuous deployments from Git.
 
-## Connect Github
+## Connect GitHub
 
-As a final step, enable the integrated build pipeline with Github to achieve continuous deployment to Kubernetes on each commit to your repository.
+As a final step, enable the integrated build pipeline with GitHub to achieve continuous deployment to Kubernetes on each commit to your repository.
 
-### Configure the Github integration
+### Configure the GitHub integration
 
-In your workspace, open Settings and navigate to Integrations. Connect Github by signing in with your Github account and approving the authentication request.
+In your workspace, open Settings and navigate to Integrations. Connect GitHub by signing in with your GitHub account and approving the authentication request.
 
 <Note>
-  If you've used the mogenius Github integration before, your Github organization already contains the mogenius app. After connecting it with your workspace, you've received a request through Github to approve an update of its permissions. Make sure to approve the request in your Github application settings.
+  If you've used the mogenius GitHub integration before, your GitHub organization already contains the mogenius app. After connecting it with your workspace, you've received a request through GitHub to approve an update of its permissions. Make sure to approve the request in your GitHub application settings.
 </Note>
 
-### Create a Github access token
+### Create a GitHub access token
 
-The build pipeline requires access to a container registry to store and retrieve container images. You can use any registry with mogenius. We'll use the Github container registry for this example.
+The build pipeline requires access to a container registry to store and retrieve container images. You can use any registry with mogenius. We'll use the GitHub container registry for this example.
 
-1. In your Github account, create a [personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens).
+1. In your GitHub account, create a [personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens).
 2. Use the type Classic (not fine-grained). Granular access to the container registry is not supported yet with fine-grained tokens.
 3. Grant permissions for `read:write packages`.
 4. Create the token and store it in a safe location (e.g. a vault).
 
 ### Deploy the Pipeline starter
 
-Lastly, you'll connect your deployments with Github repositories and deploy the build pipeline as a Github actions workflow.
+Lastly, you'll connect your deployments with GitHub repositories and deploy the build pipeline as a GitHub actions workflow.
 
 1. Open a deployment in mogenius and navigate to **Settings**.
 2. Go to the tab **Git integration**.
-3. Use the dropdown to select the repository from your Github account that should be connected with the deployment.
+3. Use the dropdown to select the repository from your GitHub account that should be connected with the deployment.
 4. Set the branch that your deployment should connect to. Note that the build pipeline will be triggered each time you push changes to this branch, updating the image of your Kubernetes deployment accordingly.
 5. From the dropdown, select the workflow template that you want to use for your pipeline. You can find all workflow templates in this [repository](https://github.com/mogenius/build-workflows/tree/develop). This setting can't be changed later.
 6. Create an API key and store it in a save location (e.g. 1password, or any other vault). This API key will be used in the pipeline to trigger the mogenius operator to update the image of your deployment.
-7. Create a new image pull secret. It will be used on the cluster to pull the image from your registry. The form selects Github container registry by default but you can use any registry. Enter your Github username and the access token you created in the previous step.
+7. Create a new image pull secret. It will be used on the cluster to pull the image from your registry. The form selects GitHub container registry by default but you can use any registry. Enter your GitHub username and the access token you created in the previous step.
 8. Check the settings for **Pipeline registry credentials** and update them if needed. They've been pre-filled based on your image pull secret. These credentials will be used in the build workflow to push the images.
 9. Optionally, define Build Args as environment variables that you want to use in the build workflow.
-8. Save your settings and the pipeline will be deployed to your Github repository.
+8. Save your settings and the pipeline will be deployed to your GitHub repository.
 
 You're done! Repeat the steps for deploying the pipeline starter for all your deployments.
 
